--- a/src/main/webapp/views/anonymous/Impressum.xhtml
+++ b/src/main/webapp/views/anonymous/Impressum.xhtml
@@ -12,12 +12,13 @@
 </h:head>
 
 <h:body>
-    <ui:include src="header.xhtml" />
+    <ui:include src="header.xhtml"/>
     <div class="container">
 
         <div class="card mt-5">
             <div class="card-body">
-                <h:outputText id="imprint-link" value="#{impressumBacking.impressumContent}" styleClass="card-text" style="white-space: pre-line"/>
+                <h:outputText id="imprint-link" value="#{impressumBacking.impressumContent}" styleClass="card-text"
+                              style="white-space: pre-line"/>
             </div>
         </div>
     </div>
