--- a/src/main/webapp/views/authenticated/profile.xhtml
+++ b/src/main/webapp/views/authenticated/profile.xhtml
@@ -24,7 +24,7 @@
                         <h3>Profile</h3>
 
                         <div class="form-group">
-                            <label for="firstName-itxt">First Name:</label>
+                            <label for="firstName-itxt">Vorname:</label>
                             <h:inputText id="firstName-itxt" value="#{profileBacking.user.firstName}"
                                          class="form-control" readonly="#{profileBacking.sameLevel}" required="true"
                                          requiredMessage="Bitte geben Sie Ihren Vornamen ein"/>
@@ -33,7 +33,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="lastName-itxt">Last Name:</label>
+                            <label for="lastName-itxt">Nachname:</label>
                             <h:inputText id="lastName-itxt" value="#{profileBacking.user.lastName}"
                                          class="form-control" readonly="#{profileBacking.sameLevel}" required="true"
                                          requiredMessage="Bitte geben Sie Ihren Nachnamen ein"/>
@@ -42,7 +42,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="email-itxt">Email:</label>
+                            <label for="email-itxt">E-mail:</label>
                             <h:inputText id="email-itxt" value="#{profileBacking.newEmail}" readonly="#{profileBacking.sameLevel}" class="form-control">
                                 <f:validator validatorId="EmailAddressAvailabilityValidator"/>
                                 <f:validator validatorId="EmailAddressSyntaxValidator"/>
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="password-iscrt">Password:</label>
+                            <label for="password-iscrt">Passwort:</label>
                             <h:inputSecret id="password-iscrt" value="#{profileBacking.user.password}" readonly="#{profileBacking.sameLevel}"
                                            validator="PasswordValidator" class="form-control"/>
 
@@ -60,11 +60,11 @@
 
 
                         <div class="form-group">
-                            <label for="birthDate-itxt">Birth Date:</label>
-                            <h:inputText id="birthDate-itxt" type="localdate" value="#{profileBacking.user.birthDate}"
+                            <label for="birthDate-itxt">Geburtsdatum:</label>
+                            <h:inputText id="birthDate-itxt" type="date" value="#{profileBacking.user.birthDate}"
                                          class="form-control" required="true" readonly="#{profileBacking.sameLevel}"
                                          requiredMessage="Bitte geben Sie Ihr Geburtsdatum ein">
-                                <f:convertDateTime type="localDate"/>
+                                <f:convertDateTime pattern="yyyy-MM-dd" type="localDate"/>
                             </h:inputText>
                             <h:message for="birthDate-itxt" styleClass="message"/>
                         </div>
@@ -72,7 +72,7 @@
                         <!--faculty table, faculties the user belongs to -->
 
                         <div>
-                            <h:outputLabel for="faculty-table" value="User faculties:"
+                            <h:outputLabel for="faculty-table" value="Benutzerfakultäten:"
                                            rendered="#{sessionInfo.admin or profileBacking.ownProfile}"/>
                             <p:dataTable id="faculty-table" value="#{profileBacking.user.userState.entrySet()}"
                                          styleClass="table table-bordered"
@@ -91,7 +91,7 @@
                         <!--set user state -->
 
                         <div>
-                            <h:outputLabel for="user-states-slcom" value="Select user state: "
+                            <h:outputLabel for="user-states-slcom" value="Benutzerstatus: "
                                            rendered="#{(sessionInfo.deanery or sessionInfo.admin) and
                                              !profileBacking.ownProfile and !profileBacking.sameLevel}"/>
 
@@ -105,7 +105,7 @@
 
                             <!--set faculty select one menu -->
 
-                            <h:outputLabel for="faculty-slcom" value="Select faculty: "
+                            <h:outputLabel for="faculty-slcom" value="Fakultät: "
                                            rendered="#{sessionInfo.admin and !profileBacking.ownProfile}"/>
 
                             <h:selectOneMenu id="faculty-slcom" value="#{profileBacking.currentFaculty}"
@@ -116,7 +116,7 @@
                             </h:selectOneMenu>
                             <!--add or update Authentication button -->
 
-                            <h:commandButton id="updateAuth-cbtn" value="Add/Update authentication"
+                            <h:commandButton id="updateAuth-cbtn" value="Authentifizierung aktualisieren"
                                              action="#{profileBacking.addOrUpdateAuth()}"
                                              class="btn btn-success"
                                              rendered="#{(sessionInfo.admin or sessionInfo.deaneryInCurrentFaculty())
@@ -124,7 +124,7 @@
 
                             <!--delete Authentication button -->
 
-                            <h:commandButton id="deleteAuth-cbtn" value="Remove authentication"
+                            <h:commandButton id="deleteAuth-cbtn" value="Authentifizierung entfernen"
                                              action="#{profileBacking.removeAuth()}"
                                              class="btn btn-danger"
                                              rendered="#{(sessionInfo.admin or sessionInfo.deaneryInCurrentFaculty())
@@ -135,12 +135,12 @@
 
                         <!--save button -->
 
-                        <h:commandButton id="save-cbtn" value="Save" action="#{profileBacking.save()}"
+                        <h:commandButton id="save-cbtn" value="Speichern" action="#{profileBacking.save()}"
                                          rendered="#{!profileBacking.sameLevel}" class="btn btn-primary"/>
 
                         <!--delete profile button -->
 
-                        <h:commandButton id="delete-cbtn" value="Delete Profile"
+                        <h:commandButton id="delete-cbtn" value="Benutzer löschen"
                                          action="#{profileBacking.deleteProfile()}"
                                          class="btn btn-danger"
                                          rendered="#{!profileBacking.sameLevel}"
